# cyanengine

./: .gitignore  CMakeLists.txt  README.md  generate_code.cmd
.run/: Pre-Compile Code Generation (Python).run.xml
apps/cyan_loader/src/: main.cpp
apps/example_dvd_screensaver/src/: main.cpp
cyan/codegen/components/: DebugName.json  Render.json  Transform.json
cyan/codegen/events/: EngineEvent.json
cyan/codegen/resources/: Script.json
cyan/modules/core/: README.md
cyan/modules/example_dvd_screensaver/: README.md
cyan/modules/example_dvd_screensaver/systems/: bouncing_logo.chai
cyan/script/: stdlib.chai
cyan/src/: engine.cpp  engine.hpp
cyan/src/engine/: engine.cpp  engine.hpp  garbage_collect_interface.hpp  scene.cpp  scene.hpp
cyan/src/engine/channel/: channel.hpp
cyan/src/engine/ecs/: ARCHITECTURE.md  component_map.cpp  component_map.hpp  ecs.cpp  ecs.hpp  ecs_common.cpp  ecs_common.hpp  ecs_global.cpp  ecs_global.hpp  entity.hpp  object_registry.hpp  single_component_registry.hpp
cyan/src/engine/resource/: module.cpp  module.hpp  resource.cpp  resource.hpp  resource_array.hpp  resource_manager.hpp
cyan/src/engine/resource/loaders/: all_resource_loaders.hpp  resource_loader.hpp  script_loader.hpp
cyan/src/engine/script/: chai_engine.cpp  chai_engine.hpp  core_stdlib.hpp  ecs_script.cpp  ecs_script.hpp  generated_script.cpp  generated_script.hpp  resource_script.cpp  resource_script.hpp  system_script.hpp
cyan/src/engine/system/: system.hpp  system_manager.hpp
cyan/src/game/: time.cpp  time.hpp
cyan/src/io/: renderer_headless.hpp  renderer_interface.hpp  select_renderer.cpp  select_renderer.hpp
cyan/src/io/backends/opengl/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
cyan/src/io/backends/sdl2/: renderer.cpp  renderer.hpp
cyan/src/io/draw2d/: renderer_interface.hpp
cyan/src/io/draw2d/backends/opengl/: renderer.cpp  renderer.hpp
cyan/src/logging/: assert.hpp  error.hpp  logger.cpp  logger.hpp
cyan/src/math/: util.hpp  vec.hpp
cyan/src/util/: string.cpp  string.hpp
cyan/test/engine/ecs/: test_component_map.cpp  test_ecs.cpp  test_ecs_common.cpp  test_object_registry.cpp  test_single_component_registry.cpp
cyan/test/engine/resource/: test_module.cpp  test_resource.cpp  test_resource_array.cpp  test_resource_manager.cpp
cyan/test/engine/resource/example_module/: README.md
cyan/test/engine/script/: test_chai_engine.cpp  test_ecs_script.cpp  test_resource_script.cpp
cyan/test/util/: test_string.cpp
util/codegen/: README.md  chaigen.py  codegen.py  common.py
